Fixed spacing issues
- Made margin after well consistent with after textarea
- Stopped table from overflowing the body container
- Adjusted button margin to align with left body border

--- a/dashboard/static/css/site.css
+++ b/dashboard/static/css/site.css
@@ -60,6 +60,11 @@ thead {
 
 #doc-page {
   margin: 10px;
+  margin-left: 0px;
+}
+
+.well {
+  margin-bottom: 10px;
 }
 
 .subject-warning-panel {
@@ -93,7 +98,7 @@ thead {
 
 .session-info {
   width: 80%;
-  margin: 20px 20px 20px 0px;
+  margin: 30px 20px 20px 0px;
 }
 
 /* Style badge on 'new-qc' labels */
